@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-31T00:53:18Z",
-  "count_outdated" : 52,
-  "uniques_outdated" : 39,
+  "timestamp" : "2023-08-02T16:12:21Z",
+  "count_outdated" : 53,
+  "uniques_outdated" : 40,
   "count" : 56,
   "uniques" : 42,
   "clones" : [
-    {
-      "timestamp": "2023-07-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-28T00:00:00Z",
       "count": 2,
